--- a/twitter/templates/twitter/base.html
+++ b/twitter/templates/twitter/base.html
@@ -7,21 +7,22 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>{% block title %}Twitter{% endblock %}</title>
     <link rel="stylesheet" href="{% static 'bootstrap.min.css' %}">
+    <link rel="stylesheet" href="{% static 'global.css' %}">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css">
-    <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/toastify-js/src/toastify.min.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/toastify-js/src/toastify.min.css">
   </head>
   <body>
     {% block body %}{% endblock %}
 	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
     <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/toastify-js"></script>
     {% if messages %}
-    <script>
-      {% for message in messages %}
-      Toastify({
-        text: '{{message}}'
-      }).showToast()
-      {% endfor %}
-    </script>
+      <script>
+        {% for message in messages %}
+          Toastify({
+            text: '{{message|escapejs}}'
+          }).showToast()
+        {% endfor %}
+      </script>
     {% endif %}
   </body>
 </html>
